dnl
dnl Caching is usually WRONG for systems with cross-mounted file systems
dnl (the cache file may correspond to a different system).  Since configure
dnl is not on a performance-critical path, go for robustness over speed.
dnl
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_INIT()

print_error() {
    echo "*# $*" 2>&1 ;
    }

AC_CONFIG_HEADER(mpich-mpid.h)

# Get the compiler (should have been set with CC) and check for 
# cross-compiling
AC_PROG_CC

# Check for a working mmap.
MMAP=0
PAC_HAVE_ANON_MMAP(MMAP=1,AC_DEFINE(HAVE_NO_ANON_MMAP))
# We need to check that semctl is ok.
PAC_SEMGET_WORKS(SEMGET=1,SEMGET=0,print_error)

if test $MMAP = 0 -a "$SEMGET" = 0; then
    print_error "Configure detected that both anonymous mmap and semget fail."
    print_error "Configuring MPICH for shared memory may cause problems!"
fi

PAC_SIGNALS_WORK
#
if test -z "$RSHCOMMAND" ; then
    machine=`hostname`
    for program in remsh rsh ssh ; do
        # First, check to see if the program exists
        AC_PATH_PROG(RSHCOMMAND,$program)
        if test -n "$RSHCOMMAND" ; then
	    AC_MSG_CHECKING([whether $RSHCOMMAND works])
            output=`$RSHCOMMAND $machine -n true 2>&1`
            if test -n "$output" ; then
		AC_MSG_RESULT([no])
		echo "Errors while trying to run true on $machine with $program"
		echo "$output"
		RSHCOMMAND=""
		# HORRIBLE, TERRIBLE BUG in AUTOCONF!!!
		# It is determined to INCORRECTLY remember some results,
		# while forgetting others (like "cross-compiling")
		ac_cv_path_RSHCOMMAND=""
            else
		AC_MSG_RESULT([yes])
		break
	    fi
        fi
    done
fi

# Sizes of int and long (for sendid type)
AC_CHECK_SIZEOF(int,0)
AC_CHECK_SIZEOF(long,0)

AC_CHECK_FUNCS(gettimeofday BSDgettimeofday)
AC_OUTPUT(localdefs)
